--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-12">
-            <p>&copy; opyright 2018 | built by. <a href="http://instagram.com/rizalyusei">Rizal <i class="glyphicon glyphicon-zoom-in"></i></a></p>
+            <p>&copy; opyright 2018 | built by. <a href="http://instagram.com/instrzl">Rizal <i class="glyphicon glyphicon-zoom-in"></i></a></p>
           </div>
         </div>
         <div class="row">
