--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about" class="page-scroll">About</a></li>
+            <!-- <li><a href="#about" class="page-scroll">About</a></li> -->
             <li><a href="#portfolio" class="page-scroll">Portfolio</a></li>
-            <li><a href="#contact" class="page-scroll">Contact</a></li>
+            <!-- <li><a href="#contact" class="page-scroll">Contact</a></li> -->
           </ul>
         </div>
       </div>
@@ -49,13 +49,13 @@
     <div class="jumbotron text-center">
       <img src="img/rizal.JPG" class="img-circle">
       <h1>Rizal Web's</h1>
-      <p>Programmer | Music | Kopi Senja</p>
+      <p>Programmer | Web Developer</p>
     </div>
     <!-- akhir jumbotron -->
 
 
     <!-- about -->
-    <section class="about" id="about">
+    <!-- <section class="about" id="about">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -83,12 +83,12 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- akhir about -->
 
 
     <!-- portfolio -->
-    <section class="portfolio" id="portfolio">
+    <section class="about" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 text-center">
@@ -100,72 +100,72 @@
         <div class="row">
           <div class="col-sm-4">
             <a href="#gb1" class="thumbnail">
-              <img src="img/portfolio/1.jpg">
+              <img src="img/portfolio/1.png">
             </a>
             <div class="overlay" id="gb1">
               <a href="#portfolio" class="close">X close</a>
               <a href="#gb6" class="prev">prev</a>
-              <img src="img/portfolio/1.jpg">
+              <img src="img/portfolio/1.png">
               <a href="#gb2" class="next">next</a>
             </div>
           </div>
 
           <div class="col-sm-4">
             <a href="#gb2" class="thumbnail">
-              <img src="img/portfolio/2.jpg">
+              <img src="img/portfolio/3.png">
             </a>
             <div class="overlay" id="gb2">
               <a href="#portfolio" class="close">X close</a>
               <a href="#gb1" class="prev">prev</a>
-              <img src="img/portfolio/2.jpg">
+              <img src="img/portfolio/3.png">
               <a href="#gb3" class="next">next</a>
             </div>
           </div>
 
           <div class="col-sm-4">
             <a href="#gb3" class="thumbnail">
-              <img src="img/portfolio/3.jpg">
+              <img src="img/portfolio/4.png">
             </a>
             <div class="overlay" id="gb3">
               <a href="#portfolio" class="close">X close</a>
               <a href="#gb2" class="prev">prev</a>
-              <img src="img/portfolio/3.jpg">
+              <img src="img/portfolio/4.png">
               <a href="#gb4" class="next">next</a>
             </div>
           </div>
 
           <div class="col-sm-4">
             <a href="#gb4" class="thumbnail">
-              <img src="img/portfolio/4.jpg">
+              <img src="img/portfolio/5.png">
             </a>
             <div class="overlay" id="gb4">
               <a href="#portfolio" class="close">X close</a>
               <a href="#gb3" class="prev">prev</a>
-              <img src="img/portfolio/4.jpg">
+              <img src="img/portfolio/5.png">
               <a href="#gb5" class="next">next</a>
             </div>
           </div>
 
           <div class="col-sm-4">
             <a href="#gb5" class="thumbnail">
-              <img src="img/portfolio/5.jpg">
+              <img src="img/portfolio/6.png">
             </a>
             <div class="overlay" id="gb5">
               <a href="#portfolio" class="close">X close</a>
               <a href="#gb4" class="prev">prev</a>
-              <img src="img/portfolio/5.jpg">
+              <img src="img/portfolio/6.png">
               <a href="#gb6" class="next">next</a>
             </div>
           </div>
 
           <div class="col-sm-4">
             <a href="#gb6" class="thumbnail">
-              <img src="img/portfolio/6.png">
+              <img src="img/portfolio/2.png">
             </a>
             <div class="overlay" id="gb6">
               <a href="#portfolio" class="close">X close</a>
               <a href="#gb5" class="prev">prev</a>
-              <img src="img/portfolio/6.png">
+              <img src="img/portfolio/2.png">
               <a href="#gb1" class="next">next</a>
             </div>
           </div>
@@ -175,7 +175,7 @@
     <!-- akhir porfolio -->
 
     <!-- contact -->
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 text-center">
@@ -217,21 +217,21 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- akhir contact -->
 
 
     <!-- footer -->
     <footer>
       <div class="container text-center">
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-sm-12">
-            <p>&copy; opyright 2018 | built by. <a href="http://instagram.com/instrzl">Rizal <i class="glyphicon glyphicon-zoom-in"></i></a></p>
+            <p>&copy; copyright 2021 | built by. <a href="http://instagram.com/instrzl" target="_blank">Rizal <i class="glyphicon glyphicon-zoom-in"></i></a></p>
           </div>
-        </div>
+        </div> -->
         <div class="row">
           <div class="com-sm-12">
-            <a href="http://youtube.com" class="btn btn-danger"><i class="glyphicon glyphicon-play"></i> Subcribe to YouTube</a>
+            <a href="http://instagram.com/instrzl" class="btn btn-primary" target="_blank"><i class="glyphicon glyphicon-search"></i> Find me on Instagram</a>
           </div>
         </div>  
       </div>
