--- a/index.html
+++ b/index.html
@@ -1,251 +1,215 @@
 <!DOCTYPE html>
-<html lang="en" id="home">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>My Portfolio</title>
+<html lang="en">
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
+  <title>Rizal Portofolio</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-    <!-- navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+  <!-- Favicons -->
+  <link href="assets/img/fav.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-          <a href="#home" class="navbar-brand page-scroll">Rizal</a>
-        </div>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i,900,900i" rel="stylesheet">
 
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <!-- <li><a href="#about" class="page-scroll">About</a></li> -->
-            <li><a href="#portfolio" class="page-scroll">Portfolio</a></li>
-            <!-- <li><a href="#contact" class="page-scroll">Contact</a></li> -->
-          </ul>
-        </div>
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/hover/hover.min.css" rel="stylesheet">
+  <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: Folio - v2.2.1
+  * Template URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+</head>
+
+<body>
+
+ <style>
+  .icolor {
+    border: 0.1px solid lightgrey
+  }
+</style>
+
+<!-- ======= Navbar ======= -->
+<nav id="main-nav">
+  <div class="row">
+    <div class="container">
+
+      <div class="logo">
+        <a href="index.html"><img src="assets/img/brand.png" alt="logo"></a>
       </div>
-    </nav>
-    <!-- akhir navbar -->
-    
-    <!-- jumbotron -->
-    <div class="jumbotron text-center">
-      <img src="img/rizal.JPG" class="img-circle">
-      <h1>Rizal Web's</h1>
-      <p>Programmer | Web Developer</p>
+
+      <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
+
+      <ul class="nav-menu list-unstyled">
+        <li><a href="#hero" class="smoothScroll">Home</a></li>
+        <li><a href="#about" class="smoothScroll">About</a></li>
+        <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
+      </ul>
+
     </div>
-    <!-- akhir jumbotron -->
+  </div>
+</nav><!-- End Navbar -->
 
+<!-- ======= Hero Section ======= -->
+<div id="hero" class="home">
 
-    <!-- about -->
-    <!-- <section class="about" id="about">
+  <div class="container">
+    <div class="hero-content">
+      <h1>I'm <span class="typed"></span></h1>
+      <p class="typed-items" data-typed-person="Rizal">Junior Programmer, Web Developer, Freelancer</p>
+
+      <ul class="list-unstyled list-social">
+        <li><a href="https://web.facebook.com/rzlfb/" target="_blank"><i class="ion-social-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/instrzl/?hl=en" target="_blank"><i class="ion-social-instagram"></i></a></li>
+        <li><a href="https://wa.me/6281391701913" target="_blank"><i class="ion-social-whatsapp"></i></a></li>
+      </ul>
+    </div>
+  </div>
+</div><!-- End Hero -->
+
+<main id="main">
+
+  <!-- ======= About Section ======= -->
+  <div id="about" class="paddsection">
+    <div class="container">
+      <div class="row justify-content-between">
+
+        <div class="col-lg-4 ">
+          <div class="div-img-bg">
+            <div class="about-img">
+              <img src="assets/img/zal.jpg" class="img-responsive" alt="me">
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-7">
+          <div class="about-descr">
+            <br>
+            <h2>About</h2>
+            <p class="separator">Tertarik Dengan Programming dan Teknologi Dunia Komputer yang sesuai dengan pendidikan terakhir saya yaitu S1 Teknik Informatika.<br>
+              <i>~ Rizal</i></p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div><!-- End About Section -->
+
+    <!-- ======= Portfolio Section ======= -->
+    <div id="portfolio" class="paddsection">
+
       <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <h2 class="text-center">About</h2>
-            <hr>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-5 col-sm-offset-1">
-            <p class="pKiri">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-          <div class="col-sm-5">
-            <p class="pKanan">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
+        <div class="section-title text-center">
+          <h2>My Portfolio</h2>
         </div>
       </div>
-    </section> -->
-    <!-- akhir about -->
 
-
-    <!-- portfolio -->
-    <section class="about" id="portfolio">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-12 text-center">
-            <h2>Portfolio</h2>
-            <hr>
+
+        <div class="row portfolio-container">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/portfolio/1.png" class="img-fluid icolor" alt="">
+            <div class="portfolio-info">
+              <h4>Aplikasi Web</h4>
+              <p>ALPOKAT BWS Kalimantan III</p>
+              <a href="assets/img/portfolio/1.png" data-gall="portfolioGallery" class="venobox preview-link"><i class="bx bx-zoom-in"></i></a>
+            </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/portfolio/2.png" class="img-fluid icolor" alt="">
+            <div class="portfolio-info">
+              <h4>Aplikasi Web</h4>
+              <p>Admin Pencarian Kos & Kontrakan</p>
+              <a href="assets/img/portfolio/2.png" data-gall="portfolioGallery" class="venobox preview-link"><i class="bx bx-zoom-in"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/portfolio/3.png" class="img-fluid icolor" alt="">
+            <div class="portfolio-info">
+              <h4>Aplikasi Android</h4>
+              <p>User Pencarian Kos & Kontrakan</p>
+              <a href="assets/img/portfolio/3.png" data-gall="portfolioGallery" class="venobox preview-link"><i class="bx bx-zoom-in"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/portfolio/4.png" class="img-fluid icolor" alt="">
+            <div class="portfolio-info">
+              <h4>Aplikasi Web</h4>
+              <p>Pelayanan Perizinan Kecamatan</p>
+              <a href="assets/img/portfolio/4.png" data-gall="portfolioGallery" class="venobox preview-link"><i class="bx bx-zoom-in"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/portfolio/5.png" class="img-fluid icolor" alt="">
+            <div class="portfolio-info">
+              <h4>Aplikasi Web</h4>
+              <p>Kepegawaian</p>
+              <a href="assets/img/portfolio/5.png" data-gall="portfolioGallery" class="venobox preview-link"><i class="bx bx-zoom-in"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/portfolio/6.png" class="img-fluid icolor" alt="">
+            <div class="portfolio-info">
+              <h4>Aplikasi Web</h4>
+              <p>Manajemen Distributor Barang</p>
+              <a href="assets/img/portfolio/6.png" data-gall="portfolioGallery" class="venobox preview-link"><i class="bx bx-zoom-in"></i></a>
+            </div>
+          </div>
+
         </div>
 
-        <div class="row">
-          <div class="col-sm-4">
-            <a href="#gb1" class="thumbnail">
-              <img src="img/portfolio/1.png">
-            </a>
-            <div class="overlay" id="gb1">
-              <a href="#portfolio" class="close">X close</a>
-              <a href="#gb6" class="prev">prev</a>
-              <img src="img/portfolio/1.png">
-              <a href="#gb2" class="next">next</a>
-            </div>
-          </div>
-
-          <div class="col-sm-4">
-            <a href="#gb2" class="thumbnail">
-              <img src="img/portfolio/3.png">
-            </a>
-            <div class="overlay" id="gb2">
-              <a href="#portfolio" class="close">X close</a>
-              <a href="#gb1" class="prev">prev</a>
-              <img src="img/portfolio/3.png">
-              <a href="#gb3" class="next">next</a>
-            </div>
-          </div>
-
-          <div class="col-sm-4">
-            <a href="#gb3" class="thumbnail">
-              <img src="img/portfolio/4.png">
-            </a>
-            <div class="overlay" id="gb3">
-              <a href="#portfolio" class="close">X close</a>
-              <a href="#gb2" class="prev">prev</a>
-              <img src="img/portfolio/4.png">
-              <a href="#gb4" class="next">next</a>
-            </div>
-          </div>
-
-          <div class="col-sm-4">
-            <a href="#gb4" class="thumbnail">
-              <img src="img/portfolio/5.png">
-            </a>
-            <div class="overlay" id="gb4">
-              <a href="#portfolio" class="close">X close</a>
-              <a href="#gb3" class="prev">prev</a>
-              <img src="img/portfolio/5.png">
-              <a href="#gb5" class="next">next</a>
-            </div>
-          </div>
-
-          <div class="col-sm-4">
-            <a href="#gb5" class="thumbnail">
-              <img src="img/portfolio/6.png">
-            </a>
-            <div class="overlay" id="gb5">
-              <a href="#portfolio" class="close">X close</a>
-              <a href="#gb4" class="prev">prev</a>
-              <img src="img/portfolio/6.png">
-              <a href="#gb6" class="next">next</a>
-            </div>
-          </div>
-
-          <div class="col-sm-4">
-            <a href="#gb6" class="thumbnail">
-              <img src="img/portfolio/2.png">
-            </a>
-            <div class="overlay" id="gb6">
-              <a href="#portfolio" class="close">X close</a>
-              <a href="#gb5" class="prev">prev</a>
-              <img src="img/portfolio/2.png">
-              <a href="#gb1" class="next">next</a>
-            </div>
-          </div>
-        </div>
       </div>
-    </section>
-    <!-- akhir porfolio -->
 
-    <!-- contact -->
-    <!-- <section class="contact" id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 text-center">
-            <h2>Contact</h2>
-            <hr>
-          </div>
-        </div>
+    </div><!-- End Portfolio Section -->
 
-        <div class="row">
-          <div class="col-sm-8 col-sm-offset-2">
-            <form>
-              <div class="form-group">
-                <label for="nama">Nama</label>
-                <input type="text" id="nama" class="form-control" placeholder="masukkan nama">
-              </div>
-              <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" class="form-control" placeholder="masukkan email">
-              </div>
-              <div class="form-group">
-                <label for="telp">No Telpon</label>
-                <input type="tel" id="telp" class="form-control" placeholder="no telpon">
-              </div>
-              <div class="form-group">
-                <label for="kategori">Pilih Kategori</label>
-                <select class="form-control">
-                <option>-- Pilih Kategori --</option>
-                <option>Anime</option>
-                <option>Desain</option>
-                <option>Music</option>
-              </select>
-              </div>
-              <div class="form-group">
-                <label for="pesan">Pesan</label>
-                <textarea class="form-control" rows="10" placeholder="masukkan pesan"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Kirim Pesan!</button>
-            </form>
-          </div>
-        </div>
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <div id="footer" class="text-center">
+    <div class="container">
+      <p>&copy; Copyrights Folio. All rights reserved.</p>
+
+      <div class="credits">
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
-    </section> -->
-    <!-- akhir contact -->
 
+    </div>
+  </div><!-- End Footer -->
 
-    <!-- footer -->
-    <footer>
-      <div class="container text-center">
-        <!-- <div class="row">
-          <div class="col-sm-12">
-            <p>&copy; copyright 2021 | built by. <a href="http://instagram.com/instrzl" target="_blank">Rizal <i class="glyphicon glyphicon-zoom-in"></i></a></p>
-          </div>
-        </div> -->
-        <div class="row">
-          <div class="com-sm-12">
-            <a href="http://instagram.com/instrzl" class="btn btn-primary" target="_blank"><i class="glyphicon glyphicon-search"></i> Find me on Instagram</a>
-          </div>
-        </div>  
-      </div>
-    </footer>
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/typed/typed.js"></script>
+  <script src="assets/vendor/jquery-sticky/jquery.sticky.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/venobox/venobox.min.js"></script>
+  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
 
-    <!-- akhir footer -->
+</body>
 
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
-  </body>
 </html>
