--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/5.png" class="img-fluid icolor" alt="">
+            <img src="assets/img/portfolio/5-1.png" class="img-fluid icolor" alt="">
             <div class="portfolio-info">
               <h4>Aplikasi Web</h4>
               <p>Kepegawaian</p>
-              <a href="assets/img/portfolio/5.png" data-gall="portfolioGallery" class="venobox preview-link"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/5-1.png" data-gall="portfolioGallery" class="venobox preview-link"><i class="bx bx-zoom-in"></i></a>
             </div>
           </div>
 
