--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/portfolio/0.png" class="img-fluid icolor" alt="">
+            <div class="portfolio-info">
+              <h4>Aplikasi Web</h4>
+              <p>Farmasi Ulin</p>
+              <a href="assets/img/portfolio/0.png" data-gall="portfolioGallery" class="venobox preview-link"><i class="bx bx-zoom-in"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/portfolio/1.png" class="img-fluid icolor" alt="">
             <div class="portfolio-info">
               <h4>Aplikasi Web</h4>
