--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="container">
     <div class="hero-content">
       <h1>I'm <span class="typed"></span></h1>
-      <p class="typed-items" data-typed-person="Rizal">Junior Programmer, Web Developer, Freelancer</p>
+      <p class="typed-items" data-typed-person="Rizal">Web Programmer, Freelancer</p>
 
       <ul class="list-unstyled list-social">
         <li><a href="https://web.facebook.com/rzlfb/" target="_blank"><i class="ion-social-facebook"></i></a></li>
@@ -86,17 +86,12 @@
   <!-- ======= About Section ======= -->
   <div id="about" class="paddsection">
     <div class="container">
-      <div class="row justify-content-between">
-
-        <div class="col-lg-4 ">
-          <div class="div-img-bg">
-            <div class="about-img">
-              <img src="assets/img/zal.jpg" class="img-responsive" alt="me">
-            </div>
-          </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-3">
+          <img src="assets/img/zal3.png" class="img-responsive" alt="me">
         </div>
 
-        <div class="col-lg-7">
+        <div class="col-lg-9">
           <div class="about-descr">
             <br>
             <h2>About</h2>
